# 3D-Kreationz-CYD-kobra-printer-hub

./: .gitignore  CMakeLists.txt  LICENSE  README.md  platformio.ini
docs/: ARDUINO_IDE_SETUP.md  BUILD.md  HARDWARE_SETUP.md  SD_CARD_SETUP.md  WIFI_CONFIG.md
firmware/src/: config.h  main.cpp
